Revert "feat: 添加客户端启动器和构建脚本"
This reverts commit 79e7aede57d9e04729a4a5df03dfe910c9b6e186.